dalitz plots init

--- a/LHCb_Open_Data_Project.ipynb
+++ b/LHCb_Open_Data_Project.ipynb
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,16 +145,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<TTree 'PhaseSpaceTree' (26 branches) at 0x7f41f62bf2e0>"
+       "<TTree 'PhaseSpaceTree' (26 branches) at 0x7fe83e0d00d0>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true,
     "hidden": true
@@ -550,7 +550,7 @@
        "[50000 rows x 26 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -574,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false,
     "hidden": true,
@@ -632,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false,
     "run_control": {
@@ -669,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -682,7 +682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -696,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -709,7 +709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -731,7 +731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -788,7 +788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true,
     "run_control": {
@@ -814,7 +814,7 @@
        "Length: 50000, dtype: float64"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -826,7 +826,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
@@ -880,7 +880,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false,
     "hidden": true,
@@ -940,7 +940,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false,
     "run_control": {
@@ -956,7 +956,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false,
     "run_control": {
@@ -974,7 +974,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -983,7 +983,7 @@
        "(106364.91630286745, 0.0)"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -994,7 +994,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false,
     "run_control": {
@@ -1012,7 +1012,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1034,7 +1034,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1043,7 +1043,7 @@
        "(5267.883223345204, 80.96468120175535)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1054,7 +1054,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1142,7 +1142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false,
     "run_control": {
@@ -1166,7 +1166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false
    },
@@ -1180,7 +1180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1189,7 +1189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1198,7 +1198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1207,7 +1207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1580,7 +1580,7 @@
        "[23895 rows x 26 columns]"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1601,7 +1601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 31,
    "metadata": {
     "collapsed": false,
     "run_control": {
@@ -1633,7 +1633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 32,
    "metadata": {
     "collapsed": true
    },
@@ -1671,7 +1671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 33,
    "metadata": {
     "collapsed": false,
     "run_control": {
@@ -1688,7 +1688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1697,7 +1697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1706,7 +1706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1728,7 +1728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -1737,7 +1737,7 @@
        "(5343.169002420646, 232.51771460720911)"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1775,7 +1775,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {
     "collapsed": true,
     "hidden": true
@@ -1815,7 +1815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 39,
    "metadata": {
     "collapsed": false,
     "hidden": true,
@@ -1841,7 +1841,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 40,
    "metadata": {
     "collapsed": false,
     "hidden": true,
@@ -1859,7 +1859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -1868,7 +1868,7 @@
        "885"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1890,7 +1890,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 42,
    "metadata": {
     "collapsed": false,
     "hidden": true,
@@ -1906,7 +1906,7 @@
        "0.037037037037037035"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1955,7 +1955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 43,
    "metadata": {
     "collapsed": false,
     "hidden": true,
@@ -1971,7 +1971,7 @@
        "0.006464700479261738"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2032,7 +2032,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from itertools import combinations\n",
+    "\n",
+    "def get_value(p):\n",
+    "    \n",
+    "    return np.sqrt(p[0, :]**2 + p[1, :]**2 + p[2, :]**2)\n",
+    "\n",
+    "class Hadron:\n",
+    "    def __init__(self, name, mass):\n",
+    "        self.name = name\n",
+    "        self.p = np.array([df[f\"{name}_PX\"], df[f\"{name}_PY\"], df[f\"{name}_PZ\"]])\n",
+    "        self.mass = mass\n",
+    "        print(self.p[0])\n",
+    "\n",
+    "    def get_energy(self):\n",
+    "        return np.sqrt(self.mass**2 + self.p**2)\n",
+    "\n",
+    "\n",
+    "\n",
+    "class Combination:\n",
+    "    def __init__(self, h1: Hadron, h2: Hadron):\n",
+    "        self.h1 = h1\n",
+    "        self.h2 = h2\n",
+    "\n",
+    "    def get_energy(self):\n",
+    "        return self.h1.get_energy() + self.h2.get_energy()\n",
+    "    \n",
+    "    def get_momentum(self):\n",
+    "        return self.h1.p + self.h2.p\n",
+    "\n",
+    "    def get_mass(self):\n",
+    "        return self.get_energy()**2 - get_value(self.get_momentum())**2\n",
+    "\n",
+    "    def __repr__(self):\n",
+    "        return f\"Hadron {h1} and {h2} with energy {self.get_energy().mean()}\"\n",
+    "\n",
+    "    \n",
+    "\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
    "metadata": {
     "collapsed": true,
     "hidden": true,
@@ -2041,26 +2087,96 @@
      "read_only": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-4168.05553893  1295.91033384  1493.04861548 ...   392.54447956\n",
+      "  -889.29669943   497.9781284 ]\n",
+      "[-3393.63609278   613.48478515   373.61399426 ... -1347.49610617\n",
+      " -2258.7016863   -959.74220502]\n",
+      "(3, 23895)\n",
+      "Mass of a combination:  -2663875907.922596 3649837122.901099\n",
+      "[-4168.05553893  1295.91033384  1493.04861548 ...   392.54447956\n",
+      "  -889.29669943   497.9781284 ]\n",
+      "[-8864.96249223  -341.75043365  4779.02922009 ... -4552.41127444\n",
+      " -5104.50959654  3324.62432742]\n",
+      "(3, 23895)\n",
+      "Mass of a combination:  -4248279414.7879596 5287740447.1545925\n",
+      "[-3393.63609278   613.48478515   373.61399426 ... -1347.49610617\n",
+      " -2258.7016863   -959.74220502]\n",
+      "[-8864.96249223  -341.75043365  4779.02922009 ... -4552.41127444\n",
+      " -5104.50959654  3324.62432742]\n",
+      "(3, 23895)\n",
+      "Mass of a combination:  -3644953062.3519635 4667535790.516506\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[Hadron H2 and H3 with energy 21048.14512768652,\n",
+       " Hadron H2 and H3 with energy 27375.88757483761,\n",
+       " Hadron H2 and H3 with energy 25140.82964265662]"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# calculate the invariant masses for each possible hadron pair combination"
+    "# calculate the invariant masses for each possible hadron pair combination\n",
+    "hadrons = [\"H1\", \"H2\", \"H3\"]\n",
+    "temp = list(combinations(hadrons, 2))\n",
+    "results = []\n",
+    "for c in temp:\n",
+    "    h1, h2 = c\n",
+    "    combination = Combination(Hadron(h1, mK), Hadron(h2, mK))\n",
+    "    results.append(combination)\n",
+    "    print(combination.get_energy().shape)\n",
+    "    m = combination.get_mass()\n",
+    "    print(\"Mass of a combination: \",m.mean(), m.std())\n",
+    "\n",
+    "results\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {
     "collapsed": true,
     "hidden": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(3, 23895)"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# plot the invariant mass for one of these combinations "
+    "# plot the invariant mass for one of these combinations \n",
+    "m = results[0].get_mass()\n",
+    "m.shape"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
    "metadata": {
     "collapsed": false,
     "hidden": true,
@@ -2107,7 +2223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {
     "collapsed": true,
     "hidden": true,
@@ -2123,7 +2239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {
     "collapsed": true,
     "hidden": true
@@ -2156,7 +2272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {
     "collapsed": false,
     "hidden": true,
@@ -2202,7 +2318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {
     "collapsed": false,
     "hidden": true,
@@ -2310,7 +2426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {
     "collapsed": false,
     "hidden": true,
@@ -2326,7 +2442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {
     "collapsed": false,
     "hidden": true,
@@ -2342,7 +2458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {
     "collapsed": true,
     "hidden": true
@@ -2368,7 +2484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {
     "collapsed": true,
     "hidden": true
@@ -2380,7 +2496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {
     "collapsed": true,
     "hidden": true
@@ -2406,7 +2522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {
     "collapsed": true,
     "hidden": true
@@ -2419,7 +2535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "metadata": {
     "collapsed": true,
     "hidden": true
